Fix 1px overflow in content wrapper

--- a/wagtail/wagtailadmin/static_src/wagtailadmin/scss/core.scss
+++ b/wagtail/wagtailadmin/static_src/wagtailadmin/scss/core.scss
@@ -107,6 +107,7 @@ body {
 }
 
 .content-wrapper {
+    box-sizing: border-box;
     width: 100%;
     height: 100%; // this has no effect on desktop, but on mobile it helps aesthetics of menu popout action
     float: left;
